--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,9 +1,13 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# dependencies
+/node_modules
+
 # misc
 .DS_Store
 .env
 .env.development
+.env.production
 .env.local
 .env.development.local
 .env.test.local
@@ -12,3 +16,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
