--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts":{
+    "serve": "cd src && nodemon server.js"
+  },
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
