--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,15 @@
     "lint-staged": "^12.3.4",
     "prettier": "2.5.1"
   },
+  "prettier": {
+    "printWidth": 110,
+    "bracketSpacing": true,
+    "trailingComma": "es5",
+    "semi": false,
+    "jsxSingleQuote": true,
+    "singleQuote": true,
+    "tabWidth": 4
+},
   "lint-staged": {
     "*.{js,jsx,ts,tsx,md,html,css}": "prettier --write"
   }
