--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,6 +57,6 @@
     "tabWidth": 4
 },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx,md,html,css}": "prettier --write"
+    "*.{js,jsx,ts,tsx,md,html,css, json}": "prettier --write"
   }
 }
