--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,9 +43,12 @@
         ]
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.2",
         "husky": "^7.0.4",
         "lint-staged": "^12.3.4",
-        "prettier": "2.5.1"
+        "postcss": "^8.4.6",
+        "prettier": "2.5.1",
+        "tailwindcss": "^3.0.23"
     },
     "prettier": {
         "printWidth": 110,
