Added in colors & fonts to tailwind config

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
         "react-router-dom": "^6.2.1",
         "react-scripts": "5.0.0",
         "typescript": "^4.5.5",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "webfontloader": "^1.6.28"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -43,6 +44,7 @@
         ]
     },
     "devDependencies": {
+        "@types/webfontloader": "^1.6.34",
         "autoprefixer": "^10.4.2",
         "husky": "^7.0.4",
         "lint-staged": "^12.3.4",
