--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,12 @@
         "@types/node": "^17.0.18",
         "@types/react": "^17.0.39",
         "@types/react-dom": "^17.0.11",
+        "framer-motion": "^6.2.8",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.2.1",
         "react-scripts": "5.0.0",
+        "react-spinners": "^0.11.0",
         "typescript": "^4.5.5",
         "web-vitals": "^2.1.4",
         "webfontloader": "^1.6.28"
