--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
         "@types/node": "^17.0.18",
         "@types/react": "^17.0.39",
         "@types/react-dom": "^17.0.11",
+        "@types/webfontloader": "^1.6.34",
         "framer-motion": "^6.2.8",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
@@ -17,7 +18,8 @@
         "react-scripts": "5.0.0",
         "react-spinners": "^0.11.0",
         "typescript": "^4.5.5",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "webfontloader": "^1.6.28"
     },
     "scripts": {
         "start": "react-scripts start",
