--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,5 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+id_rsa_priv.pem
+
 # dependencies
 /node_modules
 
