--- a/backend/package.json
+++ b/backend/package.json
@@ -7,9 +7,11 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "knex": "^1.0.3",
+    "morgan": "^1.10.0",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "winston": "^3.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
