--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
         "@types/react-dom": "^17.0.11",
         "@types/webfontloader": "^1.6.34",
         "framer-motion": "^6.2.8",
+        "jwt-decode": "^3.1.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.2.1",
