--- a/backend/package.json
+++ b/backend/package.json
@@ -1,19 +1,21 @@
 {
-  "scripts": {
-    "serve": "cd src && nodemon server.js"
-  },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.3",
-    "knex": "^1.0.3",
-    "morgan": "^1.10.0",
-    "passport": "^0.5.2",
-    "passport-jwt": "^4.0.0",
-    "pg": "^8.7.3",
-    "winston": "^3.6.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.15"
-  }
+    "scripts": {
+        "serve": "cd src && nodemon server.js",
+        "seeds": "knex seed:run",
+        "migrate": "knex migrate:latest"
+    },
+    "dependencies": {
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.0",
+        "express": "^4.17.3",
+        "knex": "^1.0.3",
+        "morgan": "^1.10.0",
+        "passport": "^0.5.2",
+        "passport-jwt": "^4.0.0",
+        "pg": "^8.7.3",
+        "winston": "^3.6.0"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.15"
+    }
 }
