Added unstyled business form with some validations | installed Formik & Yup

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
         "@types/react": "^17.0.39",
         "@types/react-dom": "^17.0.11",
         "@types/webfontloader": "^1.6.34",
+        "formik": "^2.2.9",
         "framer-motion": "^6.2.8",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
@@ -19,7 +20,8 @@
         "react-spinners": "^0.11.0",
         "typescript": "^4.5.5",
         "web-vitals": "^2.1.4",
-        "webfontloader": "^1.6.28"
+        "webfontloader": "^1.6.28",
+        "yup": "^0.32.11"
     },
     "scripts": {
         "start": "react-scripts start",
